keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__parsed-base_multiple_raw_strings.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: "PartialVdfDef::from(vdf.clone())"
---
PartialVdfDef {
    key: "Some\\non\\escaped\\text",
    value: Obj(
        ObjDef(
            {
                "Unquoted\\non\\escaped\\text": [
                    Str(
                        "And\\some\\value",
                    ),
                ],
            },
        ),
    ),
    bases: [
        "one_base.res",
        "../another_base.vdf",
        "other\\path\\sep.pop",
    ],
}
