keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__parsed-base_quoted.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: "PartialVdfDef::from(vdf.clone())"
---
PartialVdfDef {
    key: "Key",
    value: Obj(
        ObjDef(
            {},
        ),
    ),
    bases: [
        "some/base.vdf",
    ],
}
