keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__parsed-basic.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: "VdfDef::from(vdf.clone())"
---
VdfDef {
    key: "Outer Key",
    value: Obj(
        ObjDef(
            {
                "Seq Key": [
                    Str(
                        "Str Val",
                    ),
                    Obj(
                        ObjDef(
                            {},
                        ),
                    ),
                ],
            },
        ),
    ),
}
