keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__parsed-null_byte.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: "VdfDef::from(vdf.clone())"
---
VdfDef {
    key: "Key",
    value: Obj(
        ObjDef(
            {},
        ),
    ),
}
