keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__parsed-raw_strings.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: "VdfDef::from(vdf.clone())"
---
VdfDef {
    key: "Some\\text\\here",
    value: Obj(
        ObjDef(
            {
                "more\\text\\here": [
                    Str(
                        "and\\here",
                    ),
                ],
            },
        ),
    ),
}
