keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__parsed-special_characters.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: "VdfDef::from(vdf.clone())"
---
VdfDef {
    key: "Outer Key",
    value: Obj(
        ObjDef(
            {
                "Escaped Characters": [
                    Str(
                        "\n\r\t\"\\",
                    ),
                ],
                "Mixed": [
                    Str(
                        "\n\t\n\t\n\t\\\"",
                    ),
                ],
                "Raw Newline": [
                    Str(
                        "\n",
                    ),
                ],
                "Raw Tab": [
                    Str(
                        "\t",
                    ),
                ],
            },
        ),
    ),
}
