keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__parsed-unquoted_strings.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: "VdfDef::from(vdf.clone())"
---
VdfDef {
    key: "OuterKey",
    value: Obj(
        ObjDef(
            {
                "SequenceKey": [
                    Str(
                        "SequenceVal",
                    ),
                    Obj(
                        ObjDef(
                            {},
                        ),
                    ),
                ],
            },
        ),
    ),
}
