keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__rendered-base_multiple.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: rendered
---
#base "one_base.res"
#base "../another_base.vdf"
#base "other\path\sep.pop"

"Key"
{
}
