keyvalues-parser/tests/text_parser/snapshots/stub__text_parser__rendered-base_multiple_raw_strings.snap
---
source: keyvalues-parser/tests/text_parser/mod.rs
expression: rendered
---
#base "one_base.res"
#base "../another_base.vdf"
#base "other\path\sep.pop"

"Some\non\escaped\text"
{
	"Unquoted\non\escaped\text"	"And\some\value"
}
